# dominio_app

./: README.md  pyproject.toml
